# jp-zuniga

./: CREDITS.md  README.md
.github/: CREDITS.md  README.md
.github/workflows/: update.yml
updater/: justfile  main.py  pyproject.toml  shell.nix
updater/cache/: 31aae18bd2.json
updater/src/: __init__.py  __main__.py  cache.py  cache_man.py  calc_commits.py  calc_loc.py  calc_repos.py  consts.py  loc.py  repos.py  svg.py  utils.py
updater/src/cache/: 31aae18bd2.json
