[project]
    dependencies = [
        "lxml>=5.4.0",
        "pygithub>=2.6.1",
        "python-dateutil>=2.9.0.post0",
        "python-dotenv>=1.1.1",
    ]
    description = "refresh profile's stats."
    name = "updater"
    requires-python = ">=3.13"
    version = "0.3"

[tool.ruff.lint]
    allowed-confusables = ["−"]
    ignore = [
        "A004",   # ignore shadowed built-ins
        "COM812", # let ruff handle trailing commas
        "D200",   # enforce multi-line docstrings
        "D202",   # allow blank line after docstrings
        "D203",   # no blank lines between class def and docstring
        "D212",   # ignore "summary not on first line of docstring"
        "EM102",  # allow f-strings in exception constructors
        "T201",   # allow `print` statements
        "TRY003", # allow long messages in exception constructors
    ]
    select = ["ALL"]

    [tool.ruff.lint.isort]
        combine-as-imports         = true
        force-sort-within-sections = true
        order-by-type              = true
