[project]
    dependencies = [
        "lxml>=5.4.0",
        "pygithub>=2.6.1",
        "python-dateutil>=2.9.0.post0",
        "python-dotenv>=1.1.1",
    ]

    description     = "refresh profile's stats."
    name            = "updater"
    requires-python = ">=3.13"
    version         = "0.4"

[tool.ruff.lint]
    allowed-confusables = ["−"]
    ignore = [
        "COM812",
        "D200",
        "D202",
        "D203",
        "D212",
        "T201",
    ]

    select = ["ALL"]

    [tool.ruff.lint.isort]
        case-sensitive         = true
        combine-as-imports     = true
        force-wrap-aliases     = true
        order-by-type          = true
        relative-imports-order = "closest-to-furthest"
        required-imports       = ["from __future__ import annotations"]
